home links on mobile fix

--- a/assets/sass/views/front-page/_homepage.scss
+++ b/assets/sass/views/front-page/_homepage.scss
@@ -124,6 +124,8 @@
 			    padding: 0;
 			    text-align: center;
 			    opacity: 1;
+			    width: auto;
+		    	height: auto;
 		    }
 		}
 	}
